--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "wdio run ./config/wdio.conf.js",
+    "posttest": "npm run report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@wdio/cli": "^9.5.6"
+    "@wdio/cli": "^9.5.6",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@wdio/allure-reporter": "^9.5.0",
     "@wdio/appium-service": "^9.5.6",
     "@wdio/local-runner": "^9.5.6",
     "@wdio/mocha-framework": "^9.5.0",
