Inclusão de configurações para uso do BrowserStack

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PLATAFORM=ios
-ENVIRONMENT=saucelabs
+ENVIRONMENT=browserstack
 REPORT=true
 
 SAUCE_USERNAME=oauth-joycepontesf-bd69b
 SAUCE_ACCESS_KEY=1356f737-d84d-4f7f-9fd5-9b12604ad09f
+
+BROWSERSTACK_USERNAME=joycepontes_vNoDbd
+BROWSERSTACK_ACCESS_KEY=tfNxJT6kYDKmDzmtTKgM
